force-app/main/default/objects/GPBU_Package__c/GPBU_Package__c.object-meta.xml
<CustomObject>
    <description>This object holds GPBU demo descriptions and install links.</description>
    <label>GPBU Package</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPBU Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>