force-app/main/default/objects/GPBU_Package__c/fields/Admin_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Admin_Permission_Set__c</fullName>
    <description>This is the name of the permission set that should be assigned to your admin user post install to allow you to manage the setup of the demo package.</description>
    <inlineHelpText>This is the name of the permission set that should be assigned to your admin user post install to allow you to manage the setup of the demo package.</inlineHelpText>
    <label>Admin Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>