force-app/main/default/objects/GPBU_Package__c/fields/Github_Repository__c.field-meta.xml
<CustomField>
    <fullName>Github_Repository__c</fullName>
    <description>If this package is sourced from a Github Repository, this is its URL.</description>
    <label>Github Repository</label>
    <type>Url</type>
</CustomField>