force-app/main/default/objects/GPBU_Package__c/fields/Install_Link__c.field-meta.xml
<CustomField>
    <fullName>Install_Link__c</fullName>
    <description>Click this link to install the demo in your IDO</description>
    <inlineHelpText>Click this link to install the demo in your IDO</inlineHelpText>
    <label>Install Link</label>
    <type>Url</type>
</CustomField>