force-app/main/default/objects/GPBU_Package__c/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Unlocked Package</fullName>
            </value>
            <value>
                <fullName>Managed Package (G1P)</fullName>
            </value>
            <value>
                <fullName>Managed Package (G2P)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>