force-app/main/default/objects/GPBU_Package__c/fields/Installed_Version__c.field-meta.xml
<CustomField>
    <fullName>Installed_Version__c</fullName>
    <label>Installed Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>