force-app/main/default/objects/GPBU_Package__c/fields/Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date__c</fullName>
    <description>DateTime the package was last updated</description>
    <label>Last Update Date</label>
    <type>DateTime</type>
</CustomField>