force-app/main/default/objects/GPBU_Package__c/fields/Latest_Commit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_Commit_DateTime__c</fullName>
    <description>DateTime of the latest Github Commit</description>
    <label>Latest Commit DateTime</label>
    <type>DateTime</type>
</CustomField>