force-app/main/default/objects/GPBU_Package__c/fields/Latest_Package_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Package_Version_Name__c</fullName>
    <label>Latest Package Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>