force-app/main/default/objects/GPBU_Package__c/fields/Latest_SFDX_Package_Version_Description__c.field-meta.xml
<CustomField>
    <fullName>Latest_SFDX_Package_Version_Description__c</fullName>
    <label>Latest SFDX Package Version Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>