force-app/main/default/objects/GPBU_Package__c/fields/Latest_Tag_Commit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_Tag_Commit_DateTime__c</fullName>
    <description>DateTime of Latest Tag</description>
    <label>Latest Tag Commit DateTime</label>
    <type>DateTime</type>
</CustomField>