force-app/main/default/objects/GPBU_Package__c/fields/Latest_Tag_Commit_Hash__c.field-meta.xml
<CustomField>
    <fullName>Latest_Tag_Commit_Hash__c</fullName>
    <description>Hash of the latest tag from the Master branch</description>
    <label>Latest Tag Commit Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>