force-app/main/default/objects/GPBU_Package__c/fields/Latest_Tag_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Latest_Tag_Version_Number__c</fullName>
    <description>Version Number of the Latest Tag</description>
    <label>Latest Tag Version Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>