force-app/main/default/objects/GPBU_Package__c/fields/Package_Install_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>Package_Install_Type_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Package may be installed as a Unlocked, Unmanaged, or Managed Package. Leverages a &quot;SubscriberPackageVersionId&quot;</description>
    <label>Package_Install_Type_Flag</label>
    <type>Checkbox</type>
</CustomField>