force-app/main/default/objects/GPBU_Package__c/fields/POC_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Name__c</fullName>
    <description>Name of the point of contact for the demo</description>
    <inlineHelpText>Name of the point of contact for the demo</inlineHelpText>
    <label>POC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>