force-app/main/default/objects/GPBU_Package__c/fields/SFDX_Install_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Install_Type_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an SFDX Package that supports DevHub and Scratch Hub Installations. It can deployed on an org as source code.</description>
    <label>SFDX_Install_Type_Flag</label>
    <type>Checkbox</type>
</CustomField>