force-app/main/default/objects/GPBU_Package__c/fields/SFDX_Installed_Package_Alias__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Installed_Package_Alias__c</fullName>
    <description>Alias of Installed SFDX Version</description>
    <label>SFDX Installed Package Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>