force-app/main/default/objects/GPBU_Package__c/fields/Source_Installed_Commit_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Installed_Commit_Hash__c</fullName>
    <description>Commit Hash of the installed component (When installed via source)</description>
    <label>Source Installed Commit Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>