force-app/main/default/objects/GPBU_Package__c/fields/Source_Installed_Tag_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Installed_Tag_Description__c</fullName>
    <description>Version number of the installed component (When Installed via Source)</description>
    <label>Source Installed Tag Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>