force-app/main/default/objects/GPBU_Package__c/fields/Source_Installed_Tag_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Installed_Tag_Hash__c</fullName>
    <description>Tag hash of the installed package</description>
    <label>Source Installed Tag Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>