force-app/main/default/objects/GPBU_Package__c/fields/Subscriber_Package_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Package_Version_Id__c</fullName>
    <description>For Packages, the Version id of the Installed package</description>
    <label>Subscriber Package Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>