force-app/main/default/objects/GPBU_Package__c/fields/Update_Available__c.field-meta.xml
<CustomField>
    <fullName>Update_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if Update is Available</description>
    <label>Update Available</label>
    <type>Checkbox</type>
</CustomField>