force-app/main/default/objects/GPBU_Package__c/listViews/All_Demos.listView-meta.xml
<ListView>
    <fullName>All_Demos</fullName>
    <columns>NAME</columns>
    <columns>Installed__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>POC_Name__c</columns>
    <columns>POC_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Demos</label>
</ListView>