force-app/main/default/objects/GPBU_Package__c/listViews/Installed_Packages.listView-meta.xml
<ListView>
    <fullName>Installed_Packages</fullName>
    <columns>NAME</columns>
    <columns>Install_Date__c</columns>
    <columns>Installed_Version__c</columns>
    <columns>Title__c</columns>
    <columns>Update_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Installed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Installed Packages</label>
</ListView>